--- a/ArtStation_Dashboard/appsettings.json
+++ b/ArtStation_Dashboard/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Server=db21908.public.databaseasp.net;Database=db21908;User Id=db21908;Password=kW=96+cMeL@3;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  }
 }
