Add Auth Services And Token / Allow Swagger in api

--- a/ArtStation/appsettings.json
+++ b/ArtStation/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "default": "Server=db21908.public.databaseasp.net;Database=db21908;User Id=db21908;Password=kW=96+cMeL@3;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  },
+  "JWT": {
+    "SecretKey": "zZxbK/dR3Z1lv2N5iWwD3eR2zjvK10LrRvIH4v+uEYw=",
+    "Issuer": "https://localhost:7234",
+    "Audience": "MyApiUsers",
+    "DurationExpire": "30",
+    "Key": "sadlrglhtypfgrstaqaxsvd"
   }
 }
