--- a/ArtStation.Core/ArtStation.Core.csproj
+++ b/ArtStation.Core/ArtStation.Core.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
