--- a/ArtStation.Core/ArtStation.Core.csproj
+++ b/ArtStation.Core/ArtStation.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
+    <PackageReference Include="Twilio" Version="7.11.3" />
   </ItemGroup>
 
 </Project>
