--- a/ArtStation.Service/ArtStation.Services.csproj
+++ b/ArtStation.Service/ArtStation.Services.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.17" />
     <PackageReference Include="MimeKit" Version="4.12.0" />
+    <PackageReference Include="Twilio" Version="7.11.3" />
   </ItemGroup>
 
   <ItemGroup>
