Add Cart Repo & Controller & Setup Redis

--- a/ArtStation/appsettings.json
+++ b/ArtStation/appsettings.json
@@ -7,7 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Server=db21908.public.databaseasp.net;Database=db21908;User Id=db21908;Password=kW=96+cMeL@3;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+    "default": "Server=db21908.public.databaseasp.net;Database=db21908;User Id=db21908;Password=kW=96+cMeL@3;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+
+    //"Redis": "redis-17849.c98.us-east-1-4.ec2.redns.redis-cloud.com:17849,password=QrJe9AJhdIVmhVrdGfZZeLh9q6BlJr7l,abortConnect=false",
+    "Redis": "redis-13218.c322.us-east-1-2.ec2.redns.redis-cloud.com:13218,password=xmq79ybOvfDDke7JjxBbjWbuHqmRHsyN,abortConnect=false"
   },
   "JWT": {
     "SecretKey": "zZxbK/dR3Z1lv2N5iWwD3eR2zjvK10LrRvIH4v+uEYw=",
