--- a/ArtStation_Dashboard/ArtStation_Dashboard.csproj
+++ b/ArtStation_Dashboard/ArtStation_Dashboard.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\ArtStation.Service\ArtStation.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Uploads\Categories\" />
+  </ItemGroup>
+
 </Project>
