--- a/ArtStation/appsettings.json
+++ b/ArtStation/appsettings.json
@@ -23,6 +23,9 @@
     "AccountSID": "ACeeb9594e076deb74658127aa2ff0c4c0",
     "AuthToken": "5d640caac140557882e784543afb417c",
     "TwilioPhoneNumber": "+19046158371"
+  },
+  "Firebase": {
+    "ServiceAccountPath": "artstation-4523a-firebase-adminsdk-fbsvc-227ca194e6.json"
   }
-  
+
 }
