--- a/ArtStation.Repository/ArtStation.Repository.csproj
+++ b/ArtStation.Repository/ArtStation.Repository.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\ArtStation.Core\ArtStation.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
