--- a/ArtStation/ArtStation.csproj
+++ b/ArtStation/ArtStation.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\Images\Users\" />
   </ItemGroup>
 
