Add Index Order Action in Dashboard

--- a/ArtStation_Dashboard/appsettings.json
+++ b/ArtStation_Dashboard/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Server=db21908.public.databaseasp.net;Database=db21908;User Id=db21908;Password=kW=96+cMeL@3;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+    "default": "Server=db21908.public.databaseasp.net;Database=db21908;User Id=db21908;Password=kW=96+cMeL@3;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+    "Redis": "redis-13218.c322.us-east-1-2.ec2.redns.redis-cloud.com:13218,password=xmq79ybOvfDDke7JjxBbjWbuHqmRHsyN,abortConnect=false"
   }
 }
